feat: APIs and unit tests developed for the backend functionalities required of the job rotation application
* feat: get roles api, create role api and unit tests

* employee get roles by filter apis and unit tests

* feat: employee get roles multi filter api and tests

* feat: get role details, create role, multi filter apis, updated tests to improve coverage

* feat: login api and unit tests for controller and business service

* feat: get roles by single filter for staffing manager and unit tests

* feat: update role api and tests

* feat: delete role api and unit test for business logic and controller
