# job-rotation-app-backend/src/main/java/project/job_rotation_app/model/Roles.java
@@ -1,0 +1,39 @@
+package project.job_rotation_app.model;
+
+import jakarta.persistence.Entity;
+import jakarta.persistence.EnumType;
+import jakarta.persistence.Enumerated;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.Table;
+import lombok.Getter;
+import lombok.Setter;
+
+
+@Setter
+@Getter
+@Entity
+@Table(name = "roles")
+public class Roles {
+
+  @Id
+  @GeneratedValue(strategy = GenerationType.AUTO)
+  private Long roleId;
+
+  private String roleName;
+
+  @Enumerated(EnumType.STRING)
+  private Grades gradeRequired;
+
+  @Enumerated(EnumType.STRING)
+  private Departments department;
+
+  private String staffingManagerEmailAddress;
+
+  @Enumerated(EnumType.STRING)
+  private Duration duration;
+
+  private String jobDescription;
+
+}
